<resources>
    <string name="app_name">MobiLabTaskApp</string>
    <string name="section">Section</string>
    <string name="sort">Sort</string>
    <string name="apply">Apply</string>
    <string name="window">Window</string>
    <string name="selection_section">Selection Section</string>
    <string name="show_viral">Show Viral</string>
    <string name="title_gallery">Imgur Gallery</string>
    <string name="about">About</string>
    <string name="viral">Viral</string>
    <string name="hot">Hot</string>
    <string name="top">Top</string>
    <string name="user">User</string>
    <string name="time">Time</string>
    <string name="rising">Rising</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="author">Author : Mughees Anwar\n (mugheesanwar93@gmail.com)</string>
    <string name="build_time">Build Time: Few Hours Over The Weekend</string>
</resources>
